--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />
+    
     <title>Assignment-2</title>
 </head>
 <body>
@@ -49,7 +50,48 @@
 
     <!-- main section -->
     <main>
+        <section>
+            <h1 class="student-curriculam" >Standard Curriculum</h1>
 
+            <div class="curriculam">
+                <div class="curriculam-box" id="curriculam-box-1">
+                    <img src="assets/kinder.png" alt="">
+                    <h2 class="title-curriculm">Kinder (3-6) Years</h2>
+                    <p class="curriculam-description">Cum sociis natoque penatibus et magnis
+                        dis parturient montes, nascetur ridiculus
+                        mu sdis parturient</p>
+                        <h5 class="curriculam-read" id="read-more-1">Read More</h5>
+                </div>
+                <div class="curriculam-box" id="curriculam-box-2">
+                    <img src="assets/elementary.png" alt="">
+                    <h2 class="title-curriculm">Elementary School</h2>
+                    <p class="curriculam-description">Cum sociis natoque penatibus et magnis
+                        dis parturient montes, nascetur ridiculus
+                        mu sdis parturient</p>
+                        <h5 class="curriculam-read" id="read-more-2">Read More</h5>
+                </div>
+                <div class="curriculam-box" id="curriculam-box-3">
+                    <img src="assets/middle.png" alt="">
+                    <h2 class="title-curriculm">Middle (10-16) Years</h2>
+                    <p class="curriculam-description">Cum sociis natoque penatibus et magnis
+                        dis parturient montes, nascetur ridiculus
+                        mu sdis parturient</p>
+                        <h5 class="curriculam-read" id="read-more-3">Read More</h5>
+                </div>
+            </div>
+            <div class="icon">
+                <div  class="icone-bar">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-chevron-left" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0"/>
+                      </svg>
+                </div>
+                <div  class="icone-bar">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-chevron-right" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708"/>
+                      </svg>
+                </div>
+            </div>
+        </section>
     </main>
 
 </body>
