--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
                     </div>
                 </div>
             </div>
+            <div class="view"><button class="btn-primary" id="bg-color-3">View All</button></div>
         </section>
     </main>
 
