--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 
     <!-- main section -->
     <main>
+        <!-- curriculam section -->
         <section>
             <h1 class="student-curriculam" >Standard Curriculum</h1>
 
